1997-10-29  Daniel.Weaver

	* control.c, fun.c: ncurses-4.1-971101

1997-10-26  Daniel.Weaver

	* makefile, edit.c, tack.h, sync.c: ncurses-4.1-971101

1997-10-25  Daniel.Weaver

	* pad.c, tack.1: ncurses-4.1-971101

1997-10-19  Daniel.Weaver

	* tack.c, sysdep.c, scan.c, output.c, modes.c, menu.c, init.c, crum.c, color.c, charset.c, ansi.c, HISTORY:
	ncurses-4.1-971101

1997-10-06  Daniel.Weaver

	* makefile, tac.h, tack.c: ncurses-4.1-971011

1997-10-04  Daniel.Weaver

	* control.c, fun.c, sync.c, init.c, pad.c, modes.c, sysdep.c:
	ncurses-4.1-971011

1997-10-03  Daniel.Weaver

	* charset.c, output.c, edit.c, crum.c: ncurses-4.1-971011

1997-10-02  Daniel.Weaver

	* menu.c: ncurses-4.1-971011

1997-09-29  Daniel.Weaver

	* color.c, ansi.c: ncurses-4.1-971011

1997-09-28  Daniel.Weaver

	* tic.h: ncurses-4.1-971011

1997-09-22  Daniel.Weaver

	* scan.c: ncurses-4.1-971011
